--- a/app/src/main/res/layout/fragment_reminders.xml
+++ b/app/src/main/res/layout/fragment_reminders.xml
@@ -53,8 +53,10 @@
                 android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.288" />
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/addReminderFAB"
